--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -77,6 +77,7 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
         env:
           ACCOUNT_ID: ${{ secrets.ACCOUNT_ID}}
+          ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID}}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
