--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -78,8 +78,12 @@ jobs:
          ACCOUNT_ID: ${{ secrets.ACCOUNT_ID}}
          ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID}}
          SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY}}
-  
-        run: node --stack-size=8192 node_modules/.bin/next build --no-lint
+         NODE_OPTIONS: --stack-size=8192
+        # this works
+        run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
+          #   this doest work, give error in post restore cacahe 
+        # run: node --stack-size=8192 node_modules/.bin/next build --no-lint
+
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
