--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -66,11 +66,7 @@ jobs:
         with:
           path: |
             .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}-${{ github.sha }}
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
@@ -78,7 +74,7 @@ jobs:
          ACCOUNT_ID: ${{ secrets.ACCOUNT_ID}}
          ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY_ID}}
          SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY}}
-         NODE_OPTIONS: --stack-size=8192
+ 
         # this works
         run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
           #   this doest work, give error in post restore cacahe 
