--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -66,7 +66,11 @@ jobs:
         with:
           path: |
             .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}-${{ github.sha }}
+          # Generate a new cache whenever packages or source files change.
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
+          # If source files changed but packages didn't, rebuild from a prior cache.
+          restore-keys: |
+            ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Next.js
@@ -76,9 +80,9 @@ jobs:
          SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY}}
  
         # this works
-        # run: ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
+        run: node --stack-size=8192 ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
           #   this doest work, give error in post restore cacahe 
-        run: node --stack-size=8192 node_modules/.bin/next build --no-lint
+        # run: node --stack-size=8192 node_modules/.bin/next build --no-lint
 
 
       - name: Upload artifact
