--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
-    "next": "15.3.2",
+    "@next/third-parties": "^15.3.3",
+    "next": "^15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
