--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
+    "@heroicons/react": "^2.2.0",
     "@next/third-parties": "^15.3.3",
     "next": "^15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "schema-dts": "^1.1.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
