--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && npm sitemap:generate",
+    "build": "next build && pnpm sitemap:generate",
     "sitemap:generate": "dotenv -c -- npx tsx ./scripts/sitemap.ts",
     "start": "next start",
     "lint": "next lint"
