--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build && pnpm sitemap:generate",
-    "sitemap:generate": "dotenv -c -- npx tsx ./src/scripts/sitemap.ts",
+    "build": "next build && npm sitemap:generate",
+    "sitemap:generate": "npx tsx ./src/scripts/sitemap.ts",
     "start": "next start",
     "lint": "next lint"
   },
