--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -83,7 +83,7 @@ jobs:
         # run: node --stack-size=8192 ${{ steps.detect-package-manager.outputs.runner }} next build --no-lint
         # run: npx --node-options="--stack-size=8192" next build --no-lint
           #   this doest work, give error in post restore cacahe 
-        run: node --stack-size=8192 node_modules/.bin/next build --no-lint
+        run: node --stack-size=8192 node_modules/.bin/next build --no-lint && npm sitemap:generate
 
 
       - name: Upload artifact
