--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build && npm sitemap:generate",
-    "sitemap:generate": "dotenv -c -- npx tsx ./src/scripts/sitemap.ts",
+    "sitemap:generate": "npx tsx ./src/scripts/sitemap.ts",
     "start": "next start",
     "lint": "next lint"
   },
