--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -84,7 +84,8 @@ jobs:
         # run: npx --node-options="--stack-size=8192" next build --no-lint
           #   this doest work, give error in post restore cacahe 
         run: node --stack-size=8192 node_modules/.bin/next build --no-lint
- 
+      - name: Remove unnecary files
+        run: rm -rf node_modules/ *.log temp/
 
 
       - name: Upload artifact
